k8s/racktables-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: racktables-db
  labels:
    app: racktables
    tier: backend
spec:
  type: NodePort
  ports:
    - port: 3306
      targetPort: mariadb-port
  selector:
    app: racktables
    tier: backend

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: racktables-db
  labels:
    app: racktables
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: racktables
        tier: backend
    spec:
      containers:
      - image: mariadb
        name: racktables-db
        ports:
        - containerPort: 3306
          name: mariadb-port
        volumeMounts:
        - name: mariadb-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mariadb-persistent-storage
        persistentVolumeClaim:
          claimName: mariadb-pv-claim
